bag of words updates

--- a/lessons/02_bag_of_words.ipynb
+++ b/lessons/02_bag_of_words.ipynb
@@ -163,7 +163,7 @@
     "\n",
     "* How much time separates the earliest and latest tweets?\n",
     "* What gets more retweets: positive, negative, or neutral tweets?\n",
-    "* Which airline receives the highest proportion of negative tweets?"
+    "* Identify the airline whose tweets have the highest proportion of negative sentiment."
    ]
   },
   {
@@ -179,7 +179,7 @@
    "id": "67bbe641-7d4a-4ab1-831b-a1f6ca15f3a5",
    "metadata": {},
    "source": [
-    "We spent much of the last workshop learning how to preprocess the data. Let's apply what we learned to this dataset. Looking at some of the tweets above, we can see that while they are in pretty good shape, we can do some additionally processing on them.\n",
+    "We spent much of the last workshop learning how to preprocess the data. Let's apply what we learned to this dataset. Looking at some of the tweets above, we can see that while they are in pretty good shape, we can do some additional processing on them.\n",
     "\n",
     "In our pipeline, we'll omit the tokenization process, since we will perform it in a later step. Instead, we'll add a couple new preprocessing steps now that we are working with social media data. Specifically, we'll replace all hashtags with a \"HASHTAG\" token, and we'll replace all users (denoted by the \"@\" symbol) with a \"USER\" token. "
    ]
@@ -193,13 +193,12 @@
     "\n",
     "Write a function called `preprocess()` that performs the following on a text input:\n",
     "\n",
-    "* Strip whitespace.\n",
     "* Lowercase text.\n",
     "* Replace all URLs with the token \"URL\".\n",
     "* Replace all numbers with the token \"DIGIT\".\n",
     "* Replace hashtags with the token \"HASHTAG\".\n",
     "* Replace all users with the token \"USER\".\n",
-    "* Remove blank spaces.\n",
+    "* Remove blankspaces.\n",
     "\n",
     "We have provided regex patterns for each of the replacement steps in the following cells.\n",
     "\n",
@@ -228,7 +227,7 @@
    "outputs": [],
    "source": [
     "# Apply your function to the following example\n",
-    "example_tweet = \"give me a follow!! 2345 lol @justinbeiber and @BillGates are like soo #yesterday #amiright saw it on https://twitter.com #yolo\""
+    "example_tweet = \"lol @justinbeiber and @BillGates are like soo 2000 #yesterday #amiright saw it on https://twitter.com #yolo\""
    ]
   },
   {
@@ -414,7 +413,7 @@
    "source": [
     "It's not *quite* a `numpy` array. Instead, it's a `numpy` array stored in \"Compressed Sparse Format\". This format saves a lot of memory, but it is difficult to look at for a human. To illustrate the techniques in this lesson we will first uncompress this matrix. For larger datasets, however, you'll want to avoid this, as there are performance benefits to using CSF.\n",
     "\n",
-    "Converting to a normal `numpy` array is easy: we use a built-in `todense()` function!"
+    "Converting to a normal `numpy` array is easy: we use a built-in `todense()` function, and pass this into the `np.array()` function:"
    ]
   },
   {
@@ -424,7 +423,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "counts.todense()"
+    "np.array(counts.todense())"
    ]
   },
   {
@@ -495,7 +494,7 @@
     "Recall the documentation on the `CountVectorizer` object: there are many options here on how you can customize the procedure of generating the vocabulary. Let's highlight some of these values:\n",
     "\n",
     "* `lowercase`: If `True`, it will lowercase all text. This was one of our preprocessing steps from before!\n",
-    "* `stop_words`: You can choose or provide a list of stop-words. The `\"english\"` option is a built-in stop-word list, but you could provide another (e.g., the stop-word list provided by `spaCy`).\n",
+    "* `stop_words`: You can choose or provide a list of stop-words. The `\"english\"` option is a built-in stop-word list, but you could provide another (e.g., the stop-word list provided by `nltk`).\n",
     "* `min_df` or `max_df`: The **document frequency** is the fraction of documents that a token appears in. If this value is high (close to 1), a token appears in most documents. If it's low (close to 0), it appears in very few documents. You might want to remove very rare tokens (they could be typos or gibberish) and you might want to remove very common tokens (these could be uninformative words that aren't stop words). These arguments allow you to specify a range of desired document frequencies. They can either be counts or fractions."
    ]
   },
@@ -540,7 +539,7 @@
     "\n",
     "If you look at the `CountVectorizer` documentation, you'll see that it can actually accept a custom `tokenizer` and `stop_words` list. \n",
     "\n",
-    "Using what you learned in the previous workshop, create a `CountVectorizer` that utilize's the `nltk` word tokenizer and stop word list. How does the resulting DTM look different?"
+    "Using what you learned in the previous workshop, create a `CountVectorizer` that utilizes the `nltk` word tokenizer and stop word list. How does the resulting DTM look different?"
    ]
   },
   {
@@ -685,7 +684,7 @@
     "* The review claims the service is the \"best\". This is pretty positive.\n",
     "* The reviewer says they would \"love\" to come again. This is also positive.\n",
     "\n",
-    "Specific key words (tokens) were predictive of the sentiment. If someone says something was the \"best\", it's a good sign there's positive sentiment in the text. Same thing with the word \"love\". The semantic meaning of these words helps convey sentiment. \n",
+    "Specific key words (tokens) were predictive of the sentiment. If someone says something was the \"best\", it's a good sign there's positive sentiment in the text. The semantic meaning of these words helps convey sentiment. \n",
     "\n",
     "This is how we can proceed with classification. We'll construct a DTM from the text data, and use that to predict the labels using a machine learning model."
    ]
