--- a/solutions/02_bag_of_words_solutions.ipynb
+++ b/solutions/02_bag_of_words_solutions.ipynb
@@ -56,7 +56,7 @@
     "\n",
     "* How much time separates the earliest and latest tweets?\n",
     "* What gets more retweets: positive, negative, or neutral tweets?\n",
-    "* Which airline receives the highest proportion of negative tweets?"
+    "* Identify the airline whose tweets have the highest proportion of negative sentiment."
    ]
   },
   {
@@ -147,13 +147,12 @@
     "\n",
     "Write a function called `preprocess()` that performs the following on a text input:\n",
     "\n",
-    "* Strip whitespace.\n",
     "* Lowercase text.\n",
     "* Replace all URLs with the token \"URL\".\n",
     "* Replace all numbers with the token \"DIGIT\".\n",
     "* Replace hashtags with the token \"HASHTAG\".\n",
     "* Replace all users with the token \"USER\".\n",
-    "* Remove blank spaces.\n",
+    "* Remove blankspaces.\n",
     "\n",
     "We have provided regex patterns for each of the replacement steps in the following cells.\n",
     "\n",
@@ -168,7 +167,7 @@
    "outputs": [],
    "source": [
     "# Apply your function to the following example\n",
-    "example_tweet = \"give me a follow!! 2345 lol @justinbeiber and @BillGates are like soo #yesterday #amiright saw it on https://twitter.com #yolo\""
+    "example_tweet = \"lol @justinbeiber and @BillGates are like soo 2000 #yesterday #amiright saw it on https://twitter.com #yolo\""
    ]
   },
   {
@@ -328,7 +327,7 @@
     "\n",
     "If you look at the `CountVectorizer` documentation, you'll see that it can actually accept a custom `tokenizer` and `stop_words` list. \n",
     "\n",
-    "Using what you learned in the previous workshop, create a `CountVectorizer` that utilize's the `nltk` word tokenizer and stop word list. How does the resulting DTM look different?"
+    "Using what you learned in the previous workshop, create a `CountVectorizer` that utilizes the `nltk` word tokenizer and stop word list. How does the resulting DTM look different?"
    ]
   },
   {
