word embeddings tune-up

--- a/lessons/03_word_embeddings.ipynb
+++ b/lessons/03_word_embeddings.ipynb
@@ -13,11 +13,11 @@
    "id": "edf6a718-71e0-49d9-a1ed-7b0ab99d4e81",
    "metadata": {},
    "source": [
-    "Thus far, we've focused on bag-of-word approaches to text analysis, where the text is represented as a vector of word frequencies. This generally works pretty well - we can do a decent job of topic modeling and supervised classification with this approach. However, word frequencies alone don't tell the whole picture. The ordering of words, for example, provides additional context that word frequencies don't capture. Furthermore, words can be used in a variety of ways, with different meanings that get lost in a word frequency representation.\n",
+    "Thus far, we've focused on bag-of-word approaches to text analysis, where the text is represented as a vector of word frequencies. This generally works pretty well - we can do a decent job of supervised classification with this approach. However, word frequencies alone don't tell the whole picture. The ordering of words, for example, provides additional context that word frequencies don't capture. Furthermore, words can be used in a variety of ways, with different meanings that get lost in a word frequency representation.\n",
     "\n",
-    "An alternative formalization of text consists of representing the words (or bi-grams, phrases, etc.) as vectors. They're also called word embeddings, because we embed the word in a higher dimensional space. A word vector has no inherent meaning to humans - ultimately, it's just a bunch of floating point numbers. But word vectors are useful because they're a numerical representation of text that captures its semantic meaning, and can easily be used in downstream tasks, such as dictionary methods, classification, topic modeling etc. Furthermore, the vector representation can be used to perform semantic tasks, such as finding synonyms, testing analogies, and others. The million dollar question, however, is: how do we create the word vector in the first place?\n",
+    "An alternative formalization of text consists of representing the words (or bi-grams, phrases, etc.) as vectors. They're also called word embeddings, because we embed the word in a higher dimensional space. A word vector has no inherent meaning to humans - ultimately, it's just a bunch of floating point numbers. But word vectors are useful because they're a numerical representation of text that captures its semantic meaning, and can easily be used in downstream tasks, such as dictionary methods, classification, topic modeling etc. Furthermore, the vector representation can be used to perform semantic tasks, such as finding synonyms, testing analogies, and others. The big question, however, is: how do we create the word vector in the first place?\n",
     "\n",
-    "The answer to the million dollar question is to pick the right task. Specifically, we're going to calculate the word vectors so that they can be successfully used in one of two tasks: predicting surrounding words, or predicting words within a context. In this workshop, we're going to both use pre-trained word embeddings, and construct our own word embeddings."
+    "The answer is to pick the right task. Specifically, we're going to calculate the word vectors so that they can be successfully used in one of two tasks: predicting surrounding words, or predicting words within a context."
    ]
   },
   {
@@ -718,7 +718,7 @@
    "outputs": [],
    "source": [
     "# Fit the logistic regression model\n",
-    "model = fit_logistic_regression(X_train, y_train)"
+    "fitter = fit_logistic_regression(X_train, y_train)"
    ]
   },
   {
@@ -728,8 +728,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"Training accuracy: {model.score(X_train, y_train)}\")\n",
-    "print(f\"Test accuracy: {model.score(X_test, y_test)}\")"
+    "print(f\"Training accuracy: {fitter.score(X_train, y_train)}\")\n",
+    "print(f\"Test accuracy: {fitter.score(X_test, y_test)}\")"
    ]
   },
   {
@@ -761,9 +761,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "nlp",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "nlp"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -775,7 +775,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
