--- a/solutions/03_word_embeddings_solutions.ipynb
+++ b/solutions/03_word_embeddings_solutions.ipynb
@@ -402,7 +402,7 @@
    "outputs": [],
    "source": [
     "# Fit the logistic regression model\n",
-    "model = fit_logistic_regression(X_train, y_train)"
+    "fitter = fit_logistic_regression(X_train, y_train)"
    ]
   },
   {
@@ -412,16 +412,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"Training accuracy: {model.score(X_train, y_train)}\")\n",
-    "print(f\"Test accuracy: {model.score(X_test, y_test)}\")"
+    "print(f\"Training accuracy: {fitter.score(X_train, y_train)}\")\n",
+    "print(f\"Test accuracy: {fitter.score(X_test, y_test)}\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "nlp",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "nlp"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -433,7 +433,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
