bag of words adj

--- a/lessons/02_bag_of_words.ipynb
+++ b/lessons/02_bag_of_words.ipynb
@@ -41,6 +41,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "dcd13fe4-37b0-4a66-8cee-d45f61a8f3bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install pyprojroot nltk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e4a3a0d-66f4-44e5-8dd6-5f441146014d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nltk\n",
+    "nltk.download('wordnet')\n",
+    "nltk.download('stopwords')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "66f537df-169a-4a08-bced-f9687238654a",
    "metadata": {},
    "outputs": [],
@@ -67,6 +89,8 @@
     "# Import pandas\n",
     "# Use pandas to import tweets\n",
     "tweets_path = here('data/airline_tweets.csv')\n",
+    "# Run this if pyprojroot does not work\n",
+    "# tweets_path = '../data/airline_tweets.csv'\n",
     "tweets = pd.read_csv(tweets_path, sep=',')"
    ]
   },
@@ -423,7 +447,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.array(counts.todense())"
+    "# Do not run if you have limited memory - this includes DataHub and Binder\n",
+    "# np.array(counts.todense())"
    ]
   },
   {
@@ -445,6 +470,8 @@
    "source": [
     "# Extract tokens\n",
     "tokens = vectorizer.get_feature_names_out()\n",
+    "# Run this instead if you scikit-learn version is a bit older\n",
+    "# tokens = vectorizer.get_feature_names()\n",
     "# Create DTM\n",
     "dtm = pd.DataFrame(data=counts.todense(),\n",
     "                   index=tweets.index,\n",
@@ -514,6 +541,8 @@
     "# Fit, transform, and get tokens\n",
     "counts = vectorizer.fit_transform(tweets['text_processed'])\n",
     "tokens = vectorizer.get_feature_names_out()\n",
+    "# Run this instead if you scikit-learn version is a bit older\n",
+    "# tokens = vectorizer.get_feature_names()\n",
     "# Create dataframe\n",
     "dtm = pd.DataFrame(data=counts.todense(),\n",
     "                   index=tweets.index,\n",
@@ -636,6 +665,10 @@
     "tfidf = pd.DataFrame(dtm.todense(),\n",
     "                     columns=vectorizer.get_feature_names_out(),\n",
     "                     index=tweets.index)\n",
+    "# Run this if your scikit-learn version is older\n",
+    "#tfidf = pd.DataFrame(dtm.todense(),\n",
+    "#                     columns=vectorizer.get_feature_names(),\n",
+    "#                     index=tweets.index)\n",
     "tfidf.head()"
    ]
   },
@@ -1057,9 +1090,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "nlp",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "nlp"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1071,7 +1104,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
