--- a/lessons/02_bag_of_words.ipynb
+++ b/lessons/02_bag_of_words.ipynb
@@ -770,6 +770,68 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2af16205-d64f-4eed-a882-c914627844e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Did you kernel die from memory issues? \n",
+    "# Here's a handy cell to get everything set up from here.\n",
+    "# You can restart your kernel and just start from this point. \n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import re\n",
+    "import seaborn as sns\n",
+    "\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "from nltk.corpus import stopwords\n",
+    "from pyprojroot import here\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
+    "from sklearn.linear_model import LogisticRegressionCV\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from string import punctuation\n",
+    "\n",
+    "%matplotlib inline\n",
+    "\n",
+    "# Load tweets\n",
+    "# tweets_path = here('data/airline_tweets.csv')\n",
+    "tweets_path = '../data/airline_tweets.csv'\n",
+    "tweets = pd.read_csv(tweets_path, sep=',')\n",
+    "\n",
+    "def preprocess(text):\n",
+    "    \"\"\"Preprocesses a string.\"\"\"\n",
+    "    # Lowercase\n",
+    "    text = text.lower()\n",
+    "    # Replace URLs\n",
+    "    url_pattern = r'https?:\\/\\/.*[\\r\\n]*'\n",
+    "    url_repl = ' URL '\n",
+    "    text = re.sub(url_pattern, url_repl, text)\n",
+    "    # Replace digits\n",
+    "    digit_pattern = '\\d+'\n",
+    "    digit_repl = ' DIGIT '\n",
+    "    text = re.sub(digit_pattern, digit_repl, text)\n",
+    "    # Replace hashtags\n",
+    "    hashtag_pattern = r'(?:^|\\s)[＃#]{1}(\\w+)'\n",
+    "    hashtag_repl = ' HASHTAG '\n",
+    "    text = re.sub(hashtag_pattern, hashtag_repl, text)\n",
+    "    # Replace users\n",
+    "    user_pattern = r'@(\\w+)'\n",
+    "    user_repl = ' USER '\n",
+    "    text = re.sub(user_pattern, user_repl, text)\n",
+    "    # Remove blank spaces\n",
+    "    blankspace_pattern = r'\\s+'\n",
+    "    blankspace_repl = ' '\n",
+    "    text = re.sub(blankspace_pattern, blankspace_repl, text).strip()\n",
+    "    return text\n",
+    "\n",
+    "tweets['text_processed'] = tweets['text'].apply(lambda x: preprocess(x))\n",
+    "example_tweet = \"lol @justinbeiber and @BillGates are like soo 2000 #yesterday #amiright saw it on https://twitter.com #yolo\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "330d33c6-2640-44cd-8a3a-3dd62b98f3af",
    "metadata": {},
