--- a/lessons/04_topic_modeling.ipynb
+++ b/lessons/04_topic_modeling.ipynb
@@ -99,7 +99,7 @@
    "source": [
     "# Always check the documentation!\n",
     "data, labels = fetch_20newsgroups(\n",
-    "    subset='all',\n",
+    "    subset='train',\n",
     "    shuffle=True,\n",
     "    random_state=1,\n",
     "    remove=(\"headers\", \"footers\", \"quotes\"),\n",
@@ -163,7 +163,7 @@
    "outputs": [],
    "source": [
     "newsgroups = fetch_20newsgroups(\n",
-    "    subset='all',\n",
+    "    subset='train',\n",
     "    shuffle=True,\n",
     "    random_state=1,\n",
     "    remove=(\"headers\", \"footers\", \"quotes\"))"
@@ -202,7 +202,9 @@
    "id": "d4870152-ec3e-4ca6-809f-1d6214e4d56c",
    "metadata": {},
    "source": [
-    "Non-negative matrix factorization (NMF) is a dimensionality reduction technique that can be used to perform topic modeling. What does it mean? Non-negative implies we're not working with any negative numbers, and matrix factorization implies we're taking a matrix, and breaking it down into \"factors\".\n",
+    "Non-negative matrix factorization (NMF) is a dimensionality reduction technique that can be used to perform topic modeling. It was first [introduced](https://www.nature.com/articles/44565) by Lee and Seung in 1999.\n",
+    "\n",
+    "What does *non-negative matrix factorization* mean? Non-negative implies we're not working with any negative numbers, and matrix factorization implies we're taking a matrix, and breaking it down into \"factors\".\n",
     "\n",
     "The matrix under consideration is going to be some numerical representation of the text. We've already considered one - the document term matrix! Specifically, we're going to build a TF-IDF matrix from the data - let's call this matrix $V$. Let's remind ourselves what $V$ is: it's a $D\\times T$ matrix, where $D$ is the number of documents, and $T$ is the number or terms, or tokens. \n",
     "\n",
@@ -384,10 +386,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_top_words(model, feature_names, n_top_words=10, n_row=2, n_col=5):\n",
+    "def plot_top_words(model, feature_names, n_top_words=10, n_row=2, n_col=5, normalize=False):\n",
     "    fig, axes = plt.subplots(n_row, n_col, figsize=(3 * n_col, 5 * n_row), sharex=True)\n",
     "    axes = axes.flatten()\n",
-    "    for topic_idx, topic in enumerate(model.components_):\n",
+    "    components = model.components_\n",
+    "    if normalize:\n",
+    "        components = components / components.sum(axis=1)[:, np.newaxis]\n",
+    "\n",
+    "    for topic_idx, topic in enumerate(components):\n",
     "        top_features_ind = topic.argsort()[: -n_top_words - 1 : -1]\n",
     "        top_features = [feature_names[i] for i in top_features_ind]\n",
     "        weights = topic[top_features_ind]\n",
@@ -422,7 +428,7 @@
    "id": "cf55084e-a174-4356-a6dc-bac12b81f45c",
    "metadata": {},
    "source": [
-    "What can we tell from this? For one, Topic 3 looks very much like a topic related to religion; Topic 4 looks like it's about sports; Topic 7 looks like it might be related to computers; and Topic 10 looks realted to politics (specifically, Israeli or generally Middle Eastern politics).\n",
+    "What can we tell from this? For one, Topic 3 looks very much like a topic related to religion; Topic 4 looks like it's about sports; Topic 7 looks like it might be related to computers. Note that, if you used a different random seed, these topics might look different for you.\n",
     "\n",
     "Some of the topics look a little bit harder to interpret, and that comes with the territory in topic modeling."
    ]
@@ -510,7 +516,9 @@
    "id": "83e02528-7d53-4365-9589-1368ce0e5d50",
    "metadata": {},
    "source": [
-    "The biggest contribution is topic 7, which makes some sense: it generally seems to deal with computers. Notice that many of the topics have been zeroed out entirely - this is a product of enforcing *sparsity* in the model, and it stems from the `alpha` parameter in the NMF."
+    "What does this tell you?\n",
+    "\n",
+    "Notice that many of the topics have been zeroed out entirely - this is a product of enforcing *sparsity* in the model, and it stems from the `alpha` parameter in the NMF."
    ]
   },
   {
@@ -535,6 +543,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "41687845-9442-4e27-bf87-4361b49ffc2e",
+   "metadata": {},
+   "source": [
+    "Latent Dirichlet Allocation (LDA) is a Bayesian model that captures how specific topics can generate documents. It was [introduced](https://jmlr.csail.mit.edu/papers/v3/blei03a.htmlhttps://jmlr.csail.mit.edu/papers/v3/blei03a.html) in machine learning by Blei et al. It is one of the oldest models applied to perform topic modeling.\n",
+    "\n",
+    "One significant difference between LDA and NMF is that LDA is a *generative* model. This means that it can be used to *generate* new documents, by sampling from it. Assume we have a number of topics $T$. Then, we generate a new document as follows:\n",
+    "\n",
+    "1. Choose a number of words $N$ according to a Poisson distribution.\n",
+    "2. Choose a vector of values $\\boldsymbol{\\theta}=(\\theta_1, \\theta_2, \\ldots, \\theta_T)$ from a Dirichlet distribution. The details of a Dirichlet distribution aren't too important other than that it guarantees all of the $\\theta_i$ add up to 1, and are positive. So, we can think of the $\\theta_i$ as proportions, or probabilities.\n",
+    "3. For each of the $N$ words $w_n$:\n",
+    "- Choose a topic $t_n$ according to a Multinomial distribution following $\\boldsymbol{\\theta}$.\n",
+    "- Choose a word $w_n$ from a probability distribution $p(w_n|t_n)$ conditioned on $t_n$. This probability distribution is another Multinomial distribution.\n",
+    "\n",
+    "LDA does not model the order of the words, so in the end, it produces a collection of words - just like the bag of words."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c661bd4f-f4bb-4276-ab2e-aac8622450ee",
    "metadata": {},
    "source": [
@@ -542,12 +568,250 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f18f3d82-7c66-4fd1-b3ee-2478adc10627",
+   "metadata": {},
+   "source": [
+    "There's a lot of variables there, so let's consider a concrete example. Let's suppose we have two topics: soccer and basketball. These are $t_1$ and $t_2$. \n",
+    "\n",
+    "Some topics are more likely to contains words than others. For example, soccer is more likely to contain `liverpool` and `freekick`, but probably not `nba`. Basketball meanwhile will very likely contain `rebound` and `nba`. Furthermore, even though it's unlikely, a soccer topic might still refer to the `nba`. This unlikeliness is captured through the probabilities assigned in the distribution $p(w_n|t_n)$.\n",
+    "\n",
+    "Next, each document might consist of multiple \"proportions\" of topics. We've already seen this in NMF, only this time, LDA captures this via a probability distribution rather than a matrix operation. So, Document 1 might mainly be about Soccer, and not really reference basketball - this would be reflected in the probabilities $\\boldsymbol{\\theta}=(0.9, 0.1)$. Meanwhile, another document might equally reference soccer and basketball, so we'd need a different set of parameters $\\boldsymbol{\\theta}=(0.5, 0.5)$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25b01a71-66d7-4b06-a895-f258794c531d",
+   "metadata": {},
+   "source": [
+    "Once again, we're going to use `scikit-learn` to perform LDA. This time, however, we'll use a `CountVectorizer`, since LDA explicitly models *counts*."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "185447cb-f59e-4dfe-9a8a-7c350f21e1c2",
+   "id": "e5840f2e-3d16-40b2-a005-ce7b38c7fa6f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Use a CountVectorizer\n",
+    "n_tokens = 1000\n",
+    "count_vectorizer = CountVectorizer(\n",
+    "    max_df=0.95,\n",
+    "    min_df=2,\n",
+    "    max_features=n_tokens,\n",
+    "    stop_words=\"english\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95c02cc0-e3c9-4d0f-bd11-48a698df8a99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fit and transform CountVectorizer\n",
+    "counts = count_vectorizer.fit_transform(data)\n",
+    "print(counts.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "332778ad-4b3a-4e29-9dde-d1fea1f69769",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokens = count_vectorizer.get_feature_names_out()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68a4fdb8-1c6f-486b-bece-42208b918970",
+   "metadata": {},
+   "source": [
+    "This DTM is going to look very similar to the previous DTM, so let's proceed to the LDA fitting!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b53abe0-e419-45e7-9b51-14b276a25d64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.decomposition import LatentDirichletAllocation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04e65d6b-3d87-463b-a56c-e5d0ccf48d9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_components = 10\n",
+    "random_state = 0\n",
+    "\n",
+    "lda = LatentDirichletAllocation(\n",
+    "    n_components=n_components,\n",
+    "    max_iter=5,\n",
+    "    learning_method=\"online\", # Use when dataset is large\n",
+    "    learning_offset=50.0, \n",
+    "    random_state=random_state)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea61cb9e-7c02-4766-b958-263e4a36b739",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fit the LDA model!\n",
+    "lda.fit(counts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7362b9d7-d58d-423f-8940-6dc5cd726b02",
+   "metadata": {},
+   "source": [
+    "How can we analyze the trained model? The `lda` object also comes with a `components_` variable, which corresponds to the topic word distribution. Let's plot these values using the function we created above:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5ebb041-5b6d-4f99-8518-50cd8ee43540",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This time, we're normalizing - what does this do?\n",
+    "fig, axes = plot_top_words(lda, tokens, normalize=True)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d404af01-7ee8-4125-a86e-3e9244f84046",
+   "metadata": {},
+   "source": [
+    "## Challenge 3: Exploring Hyperparameters in LDA\n",
+    "\n",
+    "As in the case of NMF, try performing LDA with other variations of hyperparameters, and plot the resulting topics using the `plot_top_words` function. Use the [documentation](https://scikit-learn.org/stable/modules/generated/sklearn.decomposition.LatentDirichletAllocation.html) as a guide to choose different hyperparameters."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24e8eb97-027f-47db-a04a-4dea8d1b6ecc",
+   "metadata": {},
+   "source": [
+    "# Topic Modeling as Dimensionality Reduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0cabd263-85c1-46d4-9beb-ab7095487487",
+   "metadata": {},
+   "source": [
+    "In both NMF and LDA, we broke down the documents into topics. This was, in effect, a *change in representation*. We went from a DTM representation, to a representation of *topics*. \n",
+    "\n",
+    "Because there are fewer topics than there are tokens, we can think of this as a *dimensionality reduction*. This is desirable for several reasons, the main one being that it's easier to interpret, say, 10 dimensions than it is to interpret 1000.\n",
+    "\n",
+    "This is computationally true, as well: once we get to higher dimensions, it's harder to compare different vectors with each other, because they generally end up all close to orthogonal. This is known as the *curse of dimensionality*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29671450-9beb-4418-92cf-a6f146212a2b",
+   "metadata": {},
+   "source": [
+    "Let's first transform the counts into the topic representation:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e28b5b78-2d74-4de2-b14c-8f434530f55e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "topic_representation = lda.transform(counts)\n",
+    "topic_representation.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "641fe529-7bdf-49d2-9de7-1a43d89dd197",
+   "metadata": {},
+   "source": [
+    "We're going to use the cosine similarity to calculate the similarity between pairs of documents (remember this from Word Embeddings?). `scikit-learn` has a `cosine_similarity` function we can use:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce068c6a-aafb-4fdf-b1fe-5b742e472a97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics.pairwise import cosine_similarity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d62d3dde-1f72-45b9-a403-a45d25c5cf14",
+   "metadata": {},
+   "source": [
+    "Let's first calculate the similarity of the first two documents in the term representation:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30c68401-c26d-404e-b39c-03d97c5f21f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cosine_similarity(counts[:2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f59c32e9-7813-4839-8b2d-91f81d4ec504",
+   "metadata": {},
+   "source": [
+    "Not similar at all! Let's try in the topic representation:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5e27063-66bb-409a-83be-f34b685aff2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cosine_similarity(topic_representation[:2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "320a8bb4-4075-4a9b-ac9b-ff0acbb0a0e3",
+   "metadata": {},
+   "source": [
+    "The similarity is higher, but not that higher. What about the rest of the documents?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abb994b3-d853-4660-b3bf-84af4f82e00f",
+   "metadata": {},
+   "source": [
+    "## Challenge 3: Finding Similar Documents\n",
+    "\n",
+    "Calculate the cosine similarity between all pairs of documents, and find the two documents whose cosine similarity is the highest. What are these documents? Do they seem similar?"
+   ]
   }
  ],
  "metadata": {
