remove pyprojroot, fix some small changes

--- a/lessons/01_preprocessing.ipynb
+++ b/lessons/01_preprocessing.ipynb
@@ -37,18 +37,7 @@
    "source": [
     "Text data we want to analyze will be stored in external files that need to be imported. These files will generally be text files (`.txt`) or comma separated value files (`.csv`).\n",
     "\n",
-    "All the data used in this notebook are stored in a `data` folder that we need to access. The `pyprojroot` package makes it easy to access the `data` folder without having to worry about filepaths!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0305684f-34c2-491d-a6a0-3d5ef49892bf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Install pyprojroot if you don't already have it\n",
-    "!pip install pyprojroot"
+    "All the data used in this notebook are stored in a `data` folder that we need to access. We need to adjust our filepaths accordingly:"
    ]
   },
   {
@@ -58,11 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyprojroot import here\n",
-    "# Use here to create the filepath\n",
-    "text_path = here('data/sowing_and_reaping.txt')\n",
-    "# Does the path make sense?\n",
-    "print(text_path)"
+    "text_path = '../data/sowing_and_reaping.txt'"
    ]
   },
   {
@@ -146,7 +131,7 @@
     "# Import pandas\n",
     "import pandas as pd\n",
     "# Use pandas to import Tweets\n",
-    "csv_path = here('data/airline_tweets.csv')\n",
+    "csv_path = '../data/airline_tweets.csv'\n",
     "tweets = pd.read_csv(csv_path, sep=',')"
    ]
   },
@@ -205,7 +190,7 @@
     "# The os package has useful tools for file manipulation\n",
     "import os\n",
     "# Amazon review folder\n",
-    "amazon_path = here('data/amazon')\n",
+    "amazon_path = '../data/amazon'\n",
     "# List all the files in the amazon folder\n",
     "files = os.listdir(amazon_path)\n",
     "# Column names for each file\n",
@@ -527,7 +512,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "example1_path = here('data/example1.txt')\n",
+    "example1_path = '../data/example1.txt'\n",
     "\n",
     "with open(example1_path, 'r') as file:\n",
     "    example1 = file.read()\n",
@@ -660,6 +645,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d599284-2392-488c-a4a8-dad5eeb50f93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preprocess(text):\n",
+    "    # YOUR CODE HERE\n",
+    "    return text"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "bacc7c15-1bc7-47cd-b668-ab57634c8b04",
    "metadata": {},
@@ -684,7 +681,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "example2_path = here('data/example2.txt')\n",
+    "example2_path = '../data/example2.txt'\n",
     "\n",
     "with open(example2_path) as file:\n",
     "    example2 = file.read()\n",
@@ -1026,6 +1023,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f5dbfb0-97b1-4abf-845c-17a0d4942831",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preprocess(text):\n",
+    "    # YOUR CODE HERE\n",
+    "    return text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d259147-ad68-417c-99a6-1fecfb9b9a5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preprocess(sowing_and_reaping)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ca49653f-8700-4681-a50a-43bbb14c124d",
    "metadata": {},
@@ -1100,7 +1119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "example3_path = here('data/example3.txt')\n",
+    "example3_path = '../data/example3.txt'\n",
     "\n",
     "with open(example3_path, 'r') as file:\n",
     "    example3 = file.read()\n",
