--- a/lessons/02_bag_of_words.ipynb
+++ b/lessons/02_bag_of_words.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install pyprojroot nltk"
+    "!pip install nltk"
    ]
   },
   {
@@ -73,7 +73,6 @@
     "import re\n",
     "import seaborn as sns\n",
     "\n",
-    "from pyprojroot import here\n",
     "from string import punctuation\n",
     "\n",
     "%matplotlib inline"
@@ -88,9 +87,7 @@
    "source": [
     "# Import pandas\n",
     "# Use pandas to import tweets\n",
-    "tweets_path = here('data/airline_tweets.csv')\n",
-    "# Run this if pyprojroot does not work\n",
-    "# tweets_path = '../data/airline_tweets.csv'\n",
+    "tweets_path = '../data/airline_tweets.csv'\n",
     "tweets = pd.read_csv(tweets_path, sep=',')"
    ]
   },
@@ -787,7 +784,6 @@
     "\n",
     "from nltk.tokenize import word_tokenize\n",
     "from nltk.corpus import stopwords\n",
-    "from pyprojroot import here\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
     "from sklearn.linear_model import LogisticRegressionCV\n",
@@ -797,7 +793,6 @@
     "%matplotlib inline\n",
     "\n",
     "# Load tweets\n",
-    "# tweets_path = here('data/airline_tweets.csv')\n",
     "tweets_path = '../data/airline_tweets.csv'\n",
     "tweets = pd.read_csv(tweets_path, sep=',')\n",
     "\n",
