--- a/lessons/03_word_embeddings.ipynb
+++ b/lessons/03_word_embeddings.ipynb
@@ -69,7 +69,6 @@
     "import pandas as pd\n",
     "import re\n",
     "\n",
-    "from pyprojroot import here\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LogisticRegressionCV"
    ]
@@ -390,7 +389,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tweets_path = here('data/airline_tweets.csv')\n",
+    "tweets_path = '../data/airline_tweets.csv'\n",
     "tweets = pd.read_csv(tweets_path, sep=',')"
    ]
   },
